sdk-docs_versioned_docs/version-27.5.x/modules/Generated/Types/Types.md
---
id: "Types"
title: "Module: Generated Types"
sidebar_label: "Types"
---

## Enumerations

- [AssetTx](../../../enums/Generated/Types/AssetTx/AssetTx.md)
- [AuthorshipTx](../../../enums/Generated/Types/AuthorshipTx/AuthorshipTx.md)
- [BabeTx](../../../enums/Generated/Types/BabeTx/BabeTx.md)
- [BalancesTx](../../../enums/Generated/Types/BalancesTx/BalancesTx.md)
- [BridgeTx](../../../enums/Generated/Types/BridgeTx/BridgeTx.md)
- [CapitalDistributionTx](../../../enums/Generated/Types/CapitalDistributionTx/CapitalDistributionTx.md)
- [CddServiceProvidersTx](../../../enums/Generated/Types/CddServiceProvidersTx/CddServiceProvidersTx.md)
- [CheckpointTx](../../../enums/Generated/Types/CheckpointTx/CheckpointTx.md)
- [CommitteeMembershipTx](../../../enums/Generated/Types/CommitteeMembershipTx/CommitteeMembershipTx.md)
- [ComplianceManagerTx](../../../enums/Generated/Types/ComplianceManagerTx/ComplianceManagerTx.md)
- [ContractsTx](../../../enums/Generated/Types/ContractsTx/ContractsTx.md)
- [CorporateActionTx](../../../enums/Generated/Types/CorporateActionTx/CorporateActionTx.md)
- [CorporateBallotTx](../../../enums/Generated/Types/CorporateBallotTx/CorporateBallotTx.md)
- [CountryCode](../../../enums/Generated/Types/CountryCode/CountryCode.md)
- [ElectionProviderMultiPhaseTx](../../../enums/Generated/Types/ElectionProviderMultiPhaseTx/ElectionProviderMultiPhaseTx.md)
- [ExternalAgentsTx](../../../enums/Generated/Types/ExternalAgentsTx/ExternalAgentsTx.md)
- [GrandpaTx](../../../enums/Generated/Types/GrandpaTx/GrandpaTx.md)
- [IdentityTx](../../../enums/Generated/Types/IdentityTx/IdentityTx.md)
- [ImOnlineTx](../../../enums/Generated/Types/ImOnlineTx/ImOnlineTx.md)
- [IndicesTx](../../../enums/Generated/Types/IndicesTx/IndicesTx.md)
- [ModuleName](../../../enums/Generated/Types/ModuleName/ModuleName.md)
- [MultiSigTx](../../../enums/Generated/Types/MultiSigTx/MultiSigTx.md)
- [NftTx](../../../enums/Generated/Types/NftTx/NftTx.md)
- [PipsTx](../../../enums/Generated/Types/PipsTx/PipsTx.md)
- [PolymeshCommitteeTx](../../../enums/Generated/Types/PolymeshCommitteeTx/PolymeshCommitteeTx.md)
- [PolymeshContractsTx](../../../enums/Generated/Types/PolymeshContractsTx/PolymeshContractsTx.md)
- [PortfolioTx](../../../enums/Generated/Types/PortfolioTx/PortfolioTx.md)
- [PreimageTx](../../../enums/Generated/Types/PreimageTx/PreimageTx.md)
- [ProtocolFeeTx](../../../enums/Generated/Types/ProtocolFeeTx/ProtocolFeeTx.md)
- [RelayerTx](../../../enums/Generated/Types/RelayerTx/RelayerTx.md)
- [RewardsTx](../../../enums/Generated/Types/RewardsTx/RewardsTx.md)
- [SchedulerTx](../../../enums/Generated/Types/SchedulerTx/SchedulerTx.md)
- [SessionTx](../../../enums/Generated/Types/SessionTx/SessionTx.md)
- [SettlementTx](../../../enums/Generated/Types/SettlementTx/SettlementTx.md)
- [StakingTx](../../../enums/Generated/Types/StakingTx/StakingTx.md)
- [StateTrieMigrationTx](../../../enums/Generated/Types/StateTrieMigrationTx/StateTrieMigrationTx.md)
- [StatisticsTx](../../../enums/Generated/Types/StatisticsTx/StatisticsTx.md)
- [StoTx](../../../enums/Generated/Types/StoTx/StoTx.md)
- [SudoTx](../../../enums/Generated/Types/SudoTx/SudoTx.md)
- [SystemTx](../../../enums/Generated/Types/SystemTx/SystemTx.md)
- [TechnicalCommitteeMembershipTx](../../../enums/Generated/Types/TechnicalCommitteeMembershipTx/TechnicalCommitteeMembershipTx.md)
- [TechnicalCommitteeTx](../../../enums/Generated/Types/TechnicalCommitteeTx/TechnicalCommitteeTx.md)
- [TestUtilsTx](../../../enums/Generated/Types/TestUtilsTx/TestUtilsTx.md)
- [TimestampTx](../../../enums/Generated/Types/TimestampTx/TimestampTx.md)
- [TransactionPaymentTx](../../../enums/Generated/Types/TransactionPaymentTx/TransactionPaymentTx.md)
- [TreasuryTx](../../../enums/Generated/Types/TreasuryTx/TreasuryTx.md)
- [UpgradeCommitteeMembershipTx](../../../enums/Generated/Types/UpgradeCommitteeMembershipTx/UpgradeCommitteeMembershipTx.md)
- [UpgradeCommitteeTx](../../../enums/Generated/Types/UpgradeCommitteeTx/UpgradeCommitteeTx.md)
- [UtilityTx](../../../enums/Generated/Types/UtilityTx/UtilityTx.md)

## Type Aliases

### TxTag

Ƭ **TxTag**: [`SystemTx`](../../../enums/Generated/Types/SystemTx/SystemTx.md) \| [`BabeTx`](../../../enums/Generated/Types/BabeTx/BabeTx.md) \| [`TimestampTx`](../../../enums/Generated/Types/TimestampTx/TimestampTx.md) \| [`IndicesTx`](../../../enums/Generated/Types/IndicesTx/IndicesTx.md) \| [`AuthorshipTx`](../../../enums/Generated/Types/AuthorshipTx/AuthorshipTx.md) \| [`BalancesTx`](../../../enums/Generated/Types/BalancesTx/BalancesTx.md) \| [`IdentityTx`](../../../enums/Generated/Types/IdentityTx/IdentityTx.md) \| [`CddServiceProvidersTx`](../../../enums/Generated/Types/CddServiceProvidersTx/CddServiceProvidersTx.md) \| [`PolymeshCommitteeTx`](../../../enums/Generated/Types/PolymeshCommitteeTx/PolymeshCommitteeTx.md) \| [`CommitteeMembershipTx`](../../../enums/Generated/Types/CommitteeMembershipTx/CommitteeMembershipTx.md) \| [`TechnicalCommitteeTx`](../../../enums/Generated/Types/TechnicalCommitteeTx/TechnicalCommitteeTx.md) \| [`TechnicalCommitteeMembershipTx`](../../../enums/Generated/Types/TechnicalCommitteeMembershipTx/TechnicalCommitteeMembershipTx.md) \| [`UpgradeCommitteeTx`](../../../enums/Generated/Types/UpgradeCommitteeTx/UpgradeCommitteeTx.md) \| [`UpgradeCommitteeMembershipTx`](../../../enums/Generated/Types/UpgradeCommitteeMembershipTx/UpgradeCommitteeMembershipTx.md) \| [`MultiSigTx`](../../../enums/Generated/Types/MultiSigTx/MultiSigTx.md) \| [`BridgeTx`](../../../enums/Generated/Types/BridgeTx/BridgeTx.md) \| [`StakingTx`](../../../enums/Generated/Types/StakingTx/StakingTx.md) \| [`SessionTx`](../../../enums/Generated/Types/SessionTx/SessionTx.md) \| [`GrandpaTx`](../../../enums/Generated/Types/GrandpaTx/GrandpaTx.md) \| [`ImOnlineTx`](../../../enums/Generated/Types/ImOnlineTx/ImOnlineTx.md) \| [`SudoTx`](../../../enums/Generated/Types/SudoTx/SudoTx.md) \| [`AssetTx`](../../../enums/Generated/Types/AssetTx/AssetTx.md) \| [`CapitalDistributionTx`](../../../enums/Generated/Types/CapitalDistributionTx/CapitalDistributionTx.md) \| [`CheckpointTx`](../../../enums/Generated/Types/CheckpointTx/CheckpointTx.md) \| [`ComplianceManagerTx`](../../../enums/Generated/Types/ComplianceManagerTx/ComplianceManagerTx.md) \| [`CorporateActionTx`](../../../enums/Generated/Types/CorporateActionTx/CorporateActionTx.md) \| [`CorporateBallotTx`](../../../enums/Generated/Types/CorporateBallotTx/CorporateBallotTx.md) \| [`PipsTx`](../../../enums/Generated/Types/PipsTx/PipsTx.md) \| [`PortfolioTx`](../../../enums/Generated/Types/PortfolioTx/PortfolioTx.md) \| [`ProtocolFeeTx`](../../../enums/Generated/Types/ProtocolFeeTx/ProtocolFeeTx.md) \| [`SchedulerTx`](../../../enums/Generated/Types/SchedulerTx/SchedulerTx.md) \| [`SettlementTx`](../../../enums/Generated/Types/SettlementTx/SettlementTx.md) \| [`StatisticsTx`](../../../enums/Generated/Types/StatisticsTx/StatisticsTx.md) \| [`StoTx`](../../../enums/Generated/Types/StoTx/StoTx.md) \| [`TreasuryTx`](../../../enums/Generated/Types/TreasuryTx/TreasuryTx.md) \| [`UtilityTx`](../../../enums/Generated/Types/UtilityTx/UtilityTx.md) \| [`ExternalAgentsTx`](../../../enums/Generated/Types/ExternalAgentsTx/ExternalAgentsTx.md) \| [`RelayerTx`](../../../enums/Generated/Types/RelayerTx/RelayerTx.md) \| [`RewardsTx`](../../../enums/Generated/Types/RewardsTx/RewardsTx.md) \| [`TestUtilsTx`](../../../enums/Generated/Types/TestUtilsTx/TestUtilsTx.md) \| [`PolymeshContractsTx`](../../../enums/Generated/Types/PolymeshContractsTx/PolymeshContractsTx.md) \| [`PreimageTx`](../../../enums/Generated/Types/PreimageTx/PreimageTx.md) \| [`ContractsTx`](../../../enums/Generated/Types/ContractsTx/ContractsTx.md) \| [`NftTx`](../../../enums/Generated/Types/NftTx/NftTx.md) \| [`StateTrieMigrationTx`](../../../enums/Generated/Types/StateTrieMigrationTx/StateTrieMigrationTx.md) \| [`ElectionProviderMultiPhaseTx`](../../../enums/Generated/Types/ElectionProviderMultiPhaseTx/ElectionProviderMultiPhaseTx.md) \| [`TransactionPaymentTx`](../../../enums/Generated/Types/TransactionPaymentTx/TransactionPaymentTx.md)

#### Defined in

[generated/types.ts:896](https://github.com/PolymeshAssociation/polymesh-sdk/blob/995f17653/src/generated/types.ts#L896)

## Variables

### TxTags

• `Const` **TxTags**: `Object`

#### Type declaration

| Name | Type |
| :------ | :------ |
| `asset` | typeof [`AssetTx`](../../../enums/Generated/Types/AssetTx/AssetTx.md) |
| `authorship` | typeof [`AuthorshipTx`](../../../enums/Generated/Types/AuthorshipTx/AuthorshipTx.md) |
| `babe` | typeof [`BabeTx`](../../../enums/Generated/Types/BabeTx/BabeTx.md) |
| `balances` | typeof [`BalancesTx`](../../../enums/Generated/Types/BalancesTx/BalancesTx.md) |
| `bridge` | typeof [`BridgeTx`](../../../enums/Generated/Types/BridgeTx/BridgeTx.md) |
| `capitalDistribution` | typeof [`CapitalDistributionTx`](../../../enums/Generated/Types/CapitalDistributionTx/CapitalDistributionTx.md) |
| `cddServiceProviders` | typeof [`CddServiceProvidersTx`](../../../enums/Generated/Types/CddServiceProvidersTx/CddServiceProvidersTx.md) |
| `checkpoint` | typeof [`CheckpointTx`](../../../enums/Generated/Types/CheckpointTx/CheckpointTx.md) |
| `committeeMembership` | typeof [`CommitteeMembershipTx`](../../../enums/Generated/Types/CommitteeMembershipTx/CommitteeMembershipTx.md) |
| `complianceManager` | typeof [`ComplianceManagerTx`](../../../enums/Generated/Types/ComplianceManagerTx/ComplianceManagerTx.md) |
| `contracts` | typeof [`ContractsTx`](../../../enums/Generated/Types/ContractsTx/ContractsTx.md) |
| `corporateAction` | typeof [`CorporateActionTx`](../../../enums/Generated/Types/CorporateActionTx/CorporateActionTx.md) |
| `corporateBallot` | typeof [`CorporateBallotTx`](../../../enums/Generated/Types/CorporateBallotTx/CorporateBallotTx.md) |
| `electionProviderMultiPhase` | typeof [`ElectionProviderMultiPhaseTx`](../../../enums/Generated/Types/ElectionProviderMultiPhaseTx/ElectionProviderMultiPhaseTx.md) |
| `externalAgents` | typeof [`ExternalAgentsTx`](../../../enums/Generated/Types/ExternalAgentsTx/ExternalAgentsTx.md) |
| `grandpa` | typeof [`GrandpaTx`](../../../enums/Generated/Types/GrandpaTx/GrandpaTx.md) |
| `identity` | typeof [`IdentityTx`](../../../enums/Generated/Types/IdentityTx/IdentityTx.md) |
| `imOnline` | typeof [`ImOnlineTx`](../../../enums/Generated/Types/ImOnlineTx/ImOnlineTx.md) |
| `indices` | typeof [`IndicesTx`](../../../enums/Generated/Types/IndicesTx/IndicesTx.md) |
| `multiSig` | typeof [`MultiSigTx`](../../../enums/Generated/Types/MultiSigTx/MultiSigTx.md) |
| `nft` | typeof [`NftTx`](../../../enums/Generated/Types/NftTx/NftTx.md) |
| `pips` | typeof [`PipsTx`](../../../enums/Generated/Types/PipsTx/PipsTx.md) |
| `polymeshCommittee` | typeof [`PolymeshCommitteeTx`](../../../enums/Generated/Types/PolymeshCommitteeTx/PolymeshCommitteeTx.md) |
| `polymeshContracts` | typeof [`PolymeshContractsTx`](../../../enums/Generated/Types/PolymeshContractsTx/PolymeshContractsTx.md) |
| `portfolio` | typeof [`PortfolioTx`](../../../enums/Generated/Types/PortfolioTx/PortfolioTx.md) |
| `preimage` | typeof [`PreimageTx`](../../../enums/Generated/Types/PreimageTx/PreimageTx.md) |
| `protocolFee` | typeof [`ProtocolFeeTx`](../../../enums/Generated/Types/ProtocolFeeTx/ProtocolFeeTx.md) |
| `relayer` | typeof [`RelayerTx`](../../../enums/Generated/Types/RelayerTx/RelayerTx.md) |
| `rewards` | typeof [`RewardsTx`](../../../enums/Generated/Types/RewardsTx/RewardsTx.md) |
| `scheduler` | typeof [`SchedulerTx`](../../../enums/Generated/Types/SchedulerTx/SchedulerTx.md) |
| `session` | typeof [`SessionTx`](../../../enums/Generated/Types/SessionTx/SessionTx.md) |
| `settlement` | typeof [`SettlementTx`](../../../enums/Generated/Types/SettlementTx/SettlementTx.md) |
| `staking` | typeof [`StakingTx`](../../../enums/Generated/Types/StakingTx/StakingTx.md) |
| `stateTrieMigration` | typeof [`StateTrieMigrationTx`](../../../enums/Generated/Types/StateTrieMigrationTx/StateTrieMigrationTx.md) |
| `statistics` | typeof [`StatisticsTx`](../../../enums/Generated/Types/StatisticsTx/StatisticsTx.md) |
| `sto` | typeof [`StoTx`](../../../enums/Generated/Types/StoTx/StoTx.md) |
| `sudo` | typeof [`SudoTx`](../../../enums/Generated/Types/SudoTx/SudoTx.md) |
| `system` | typeof [`SystemTx`](../../../enums/Generated/Types/SystemTx/SystemTx.md) |
| `technicalCommittee` | typeof [`TechnicalCommitteeTx`](../../../enums/Generated/Types/TechnicalCommitteeTx/TechnicalCommitteeTx.md) |
| `technicalCommitteeMembership` | typeof [`TechnicalCommitteeMembershipTx`](../../../enums/Generated/Types/TechnicalCommitteeMembershipTx/TechnicalCommitteeMembershipTx.md) |
| `testUtils` | typeof [`TestUtilsTx`](../../../enums/Generated/Types/TestUtilsTx/TestUtilsTx.md) |
| `timestamp` | typeof [`TimestampTx`](../../../enums/Generated/Types/TimestampTx/TimestampTx.md) |
| `transactionPayment` | typeof [`TransactionPaymentTx`](../../../enums/Generated/Types/TransactionPaymentTx/TransactionPaymentTx.md) |
| `treasury` | typeof [`TreasuryTx`](../../../enums/Generated/Types/TreasuryTx/TreasuryTx.md) |
| `upgradeCommittee` | typeof [`UpgradeCommitteeTx`](../../../enums/Generated/Types/UpgradeCommitteeTx/UpgradeCommitteeTx.md) |
| `upgradeCommitteeMembership` | typeof [`UpgradeCommitteeMembershipTx`](../../../enums/Generated/Types/UpgradeCommitteeMembershipTx/UpgradeCommitteeMembershipTx.md) |
| `utility` | typeof [`UtilityTx`](../../../enums/Generated/Types/UtilityTx/UtilityTx.md) |

#### Defined in

[generated/types.ts:946](https://github.com/PolymeshAssociation/polymesh-sdk/blob/995f17653/src/generated/types.ts#L946)
